# fastapi-deprecation

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: index.md
docs/reference/: core.md  dependencies.md  engine.md  middleware.md  openapi.md  rate-limiting.md  telemetry.md  utils.md
examples/: showcase.py
src/fastapi_deprecation/: __init__.py  core.py  dependencies.py  engine.py  middleware.py  openapi.py  sse.py  utils.py  websocket.py
src/fastapi_deprecation/metrics/: __init__.py  base.py  memory.py  prometheus.py  redis.py  tracker.py
tests/: test_brownouts.py  test_cache_tags.py  test_caching.py  test_chaos_brownouts.py  test_core.py  test_custom_responses.py  test_extended.py  test_links.py  test_metrics_memory.py  test_metrics_prometheus.py  test_metrics_redis.py  test_middleware.py  test_openapi.py  test_performance.py  test_recursive_openapi.py  test_utils.py  test_websockets_sse.py
